--- a/app/templates/emil.html
+++ b/app/templates/emil.html
@@ -17,7 +17,7 @@
     <h2>facture  de monsieu(madame) : {{ data.name }} </h2>
     <h3>jour de repetition : {{ data.jours }}</h3>
     <h3> matires : {{ data.matiere }}</h3>
-    <h3> lieux de residence : {{ data.ville }} au quartier  {{ data.street }}</h3>
+    <h3> lieux de residence : {{ data.ville }} au quartier  {{ data.quartier }}</h3>
     <h3>motant a payer : (nombre de jour)x(nombre d'heure)x(nombre de matires)x(taux)
        <h2>total = {{ count }}x{{ data.heure }}x{{ count2 }}x{{ data.Price }} </h2>
        <h1>{{data.taux }}</h1> 
