--- a/app/templates/index1.html
+++ b/app/templates/index1.html
@@ -26,7 +26,7 @@
         <div class="card text-left ">
           
           <div class="card-body">
-            <h1 class="r">Bienvenu sur la page de finition de Serad   Education monsieu(madame) :<div class="text-success ">{{ data.name }}</div></h1>
+            <h1 class="r">Bienvenu sur la page de finition 222222222222222222222de Serad   Education monsieu(madame) :<div class="text-success ">{{ data.name }}</div></h1>
             <small> 
   
             <p style="text-align:justify;" class="card-text">
@@ -42,7 +42,7 @@
                   <h2> si vous etes satisfait cliquer sur le bouton envoyer et le tour est joué </h2>
             
                 {% if msg %}
-                <h1 style = "color: green;">{{msg}} </h1>
+                <h1 style = "color: green;">{{msg}} 222222</h1>
                     
                 
                 
